--- a/Papiea-design.org
+++ b/Papiea-design.org
@@ -148,6 +148,9 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
          // Does the engine pauses all intentful operation invocations for
          // the duration of the procedural call
          execution_strategy: Procedural_Execution_Strategy;
+
+         // Action url into the provider
+         procedure_callback: Provider_Callback_URL;
      }
 
      interface Provider_Kind {
