Renamed list_specs to list_status

--- a/Papiea-design.org
+++ b/Papiea-design.org
@@ -286,7 +286,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
           // We could come up with command such as greater-than etc at some
           // later point, or we could use a similar dsl to mongodb search
           // dsl.
-          list_specs(fields_map: any): [Metadata, Status][];
+          list_status(fields_map: any): [Metadata, Status][];
       }
 
     #+END_SRC
