--- a/Papiea-design.org
+++ b/Papiea-design.org
@@ -56,7 +56,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
    #+BEGIN_SRC typescript
      interface Metadata {
          // Identity fields
-         uuid: string;
+         uuid: uuid4;
          kind: string;
          spec_version: number;
 
@@ -271,22 +271,22 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
 
           // Update the status in the status db. As long as the input is
           // correct this always succeeds.
-          update_status(meta:Metadata, status:Status):boolean;
+          update_status(entity_uuid:uuid4, status:Status):boolean;
 
           // Gets the status of a particular entity from the db. Returns
           // both current metadata and status of the entity.
-          get_status(meta:Metadata):[Metadata, Status];
+          get_status(entity_uuid:uuid4):Status;
 
           // List all status that have their fields match the ones given in
           // fields_map. E.g. we could look for all specs for `vm` kind that
           // have a certain ip:
-          // list_specs({"metadata": {"kind": "vm"},
-          //             "status":   {"ip":   "10.0.0.10"}})
+          // list_status({"metadata": {"kind": "vm"},
+          //              "status":   {"ip":   "10.0.0.10"}})
           //
           // We could come up with command such as greater-than etc at some
           // later point, or we could use a similar dsl to mongodb search
           // dsl.
-          list_status(fields_map: any): [Metadata, Status][];
+          list_status(fields_map: any): [uuid4, Status][];
       }
 
     #+END_SRC
@@ -350,7 +350,7 @@ Papiea is aimed to be a reference implementation of a [[*Formalities][formal gen
           list_providers(): Provider_Description[]
 
           // Removes and de-registers a provider from the intent engine
-          delete_provider(provider_uuid: string): boolean;
+          delete_provider(provider_uuid: uuid4): boolean;
       }
 
     #+END_SRC
